# cr_5_database

./: .gitignore  README.md  config.py  database.ini  main.py  pyproject.toml
src/: class_db_manager.py  utils.py
